[package]
name = "axis-markets-orderbook"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[dependencies]
soroban-sdk = "26.0.0"

[dev-dependencies]
soroban-sdk = { version = "26.0.0", features = ["testutils"] }
test-case = "*"

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true